fixing z-index bullshit with preview pain

--- a/src/client/stylesheets/components/_sidebar.scss
+++ b/src/client/stylesheets/components/_sidebar.scss
@@ -187,7 +187,6 @@ $icons: '../icons/';
         background-color: inherit;
         
         .preview .container {
-            z-index: 9;
             position: absolute;
             padding: 0px;
             width: 100%;
@@ -200,14 +199,14 @@ $icons: '../icons/';
             transition: transform ease 250ms;
 
             &.desktop {
-                z-index: -10;
+                z-index: 9;
                 border-left: solid 2px #333333;
                 border-right: solid 2px #333333;
             }
 
             &.mobile {
                 left: -100%;
-                z-index: 200;
+                z-index: 11;
             }
 
             &.visible {
@@ -312,13 +311,11 @@ $icons: '../icons/';
         }
 
         .properties {
-            //z-index: 150;
             flex-grow: 1;
             width: 100%;
             padding-top: 5px;
             padding-bottom: 5px;
             overflow: auto;
-            //background-color: inherit;
             
             .icon {
                 font-size: 24px;
@@ -457,7 +454,6 @@ $icons: '../icons/';
                     background-color: #333333;
                     border-bottom: 2px solid #333333;
                     color: #F8F8F8;
-                    //cursor: default;
                     -webkit-touch-callout: none;
                     -webkit-user-select: none;
                     -khtml-user-select: none;
@@ -480,6 +476,7 @@ $icons: '../icons/';
 
         .rc-menu {
             border-radius: 0px;
+            z-index: inherit;
         }
     }
 }
@@ -607,10 +604,6 @@ $icons: '../icons/';
 
     &.circular-runout {
         background-image: url($icons + 'tolerance/circular_runout.svg');
-    }
-
-    &.corner-radius {
-        background-image: url($icons + 'dimension/corner_radius.svg')
     }
 
     &.circularity {
